2005-04-28    <don@gramps-project.org>
	* src/FamilyView.py: fix adding child to wrong family

2005-04-27  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/gramps_main.py (__init__): Avoid TypeError in schema error
	message
	* src/StartupDialog.py (__init__): Catch Schema errors

2005-04-26  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/EditPerson.py (on_apply_person_clicked): Fix crash when
	changing gender caused by a family handle/object mismatch
	
	* src/MergePeople.py: Corrected gender display (closes #1190203)

2005-04-25  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/FamilyView.py: Dont crash on empty database

2005-04-24  Don Allingham  <don@gramps-project.org>
	* src/gramps.glade: remove REDO menu item

2005-04-24  Eero Tamminen  <eerot@sf>
	* configure.in: Add Finnish back to installed languages
	* src/po/fi.po: Make translations more consistent + some fixes

2005-04-24  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/rel_ru.py (get_parents): Remove gettext string.

	* src/ReportUtils.py (list_person_str): Add missing periods;
	Use burial_date and burial_place for named format string parameters.

	* src/ReportUtils.py (died_str): Typo.
	* src/plugins/DetDescendantReport.py (add_user_options): Typos.
	* src/plugins/DetAncestralReport.py (add_user_options): Typos.
	* src/gramps_main.py (on_home_clicked): Typo.
	* src/rule.glade: Translate label.
	* src/po/fi.po: Add to gramps20 branch.
	* src/po/template.po: Update translation template.
	* src/po/ru.po: Translation update.

	* src/EditSource.py (button_press): Proper invokation of editors.
	* src/ImageSelect.py: Remove workarounds for window management.

	* src/Report.py (GrampsStyleComboBox): Use non-translated style name.

2005-04-23  Julio Sanchez  <jsanchez@users.sourceforge.net>
	* src/po/es.po: Nearly complete update, but completely untested

2005-04-23  Eero Tamminen  <eerot@sf>
	* src/po/fi.po: Improved translations for style and filter names
	  and some other things.  Still not tested