@@ -8,7 +8,8 @@ pkgdatadir = $(datadir)/@PACKAGE@/dates
 pkgdata_PYTHON = \
 	Date_ru.py\
 	Date_fr.py\
-	Date_es.py
+	Date_es.py\
+	Date_fi.py
 
 pkgpyexecdir = @pkgpyexecdir@/dates
 pkgpythondir = @pkgpythondir@/dates
