@@ -1,3 +1,9 @@
+2005-04-29  Eero Tamminen  <eerot@sf>
+	* src/dates/Date_fi.py: initial Finnish date parser, doesn't yet
+	  work correctly
+	* src/dates/Makefile.am: Added Date_fi.py
+	* src/po/fi.po: Updated translation from template.po + some fixes
+
 2005-04-28    <don@gramps-project.org>
 	* src/FamilyView.py: fix adding child to wrong family
 
